// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-escaped.js [espree] format 1`] = `
"Unexpected token n\\\\u{63} (2:8)
  1 | // export asyn\\\\u{63} from \\"async\\";
> 2 | export n\\\\u{63} from \\"async\\";
    |        ^"
`;

exports[`default-escaped.js [meriyah] format 1`] = `
"[2:12]: Unexpected token: 'identifier' (2:12)
  1 | // export asyn\\\\u{63} from \\"async\\";
> 2 | export n\\\\u{63} from \\"async\\";
    |            ^"
`;

exports[`default-escaped.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// export asyn\\u{63} from "async";
export n\\u{63} from "async";
=====================================output=====================================
// export asyn\\u{63} from "async";
export nc from "async";

================================================================================
`;
